@startuml

abstract class Edificio{
    #comportamientoPistas: ComportamientoPistas
    #comportamientoDeDemora: ComportamientoDeDemora
    #comportamientoVisita: ComportamientoVisita

    +mostrarPista(): void
    +entrarAlEdificio(): void
}

class EdificioAeropuerto {
    --
    +EdificioAeropuerto()
}

class EdificioBanco {
    --
    +EdificioBanco()
}

class EdificioBiblioteca {
    --
    +EdificioBiblioteca()
}

class EdificioPuerto {
    --
    +EdificioPuerto()
}

Edificio <|-down- EdificioAeropuerto
Edificio <|-down- EdificioBanco
Edificio <|-down- EdificioBiblioteca
Edificio <|-down- EdificioPuerto


@enduml